--- a/MDK-ARM/lr1110_modem_application_examples/lr1110_modem_application_examples.build_log.htm
+++ b/MDK-ARM/lr1110_modem_application_examples/lr1110_modem_application_examples.build_log.htm
@@ -21,20 +21,21 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-D:\RF_things\3.Project\MLR1110\LR1110_Code\LR1110_Tracker\MDK-ARM\lr1110_modem_application_example.uvprojx
+D:\RF_things\3.Project\KLTN\Src\LR1110_Tracker\MDK-ARM\lr1110_modem_application_example.uvprojx
 Project File Date:  04/23/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'lr1110_modem_tracker_US915'
+compiling tracker_utility.c...
 compiling main_tracker.c...
-..\Src\apps\Tracker\main_tracker.c(382): warning:  #550-D: variable "modem_response_code"  was set but never used
-      lr1110_modem_response_code_t modem_response_code = LR1110_MODEM_RESPONSE_CODE_OK;
-..\Src\apps\Tracker\main_tracker.c(992): warning:  #177-D: function "print_lorawan_keys"  was declared but never referenced
-  static void print_lorawan_keys( const uint8_t* dev_eui, const uint8_t* join_eui, const uint8_t* app_key, uint32_t pin )
+..\Src\apps\Tracker\main_tracker.c(1082): warning:  #177-D: function "is_tracker_in_static_mode"  was declared but never referenced
+  static bool is_tracker_in_static_mode( void )
+..\Src\apps\Tracker\main_tracker.c(1332): warning:  #177-D: function "bme280_init"  was declared but never referenced
+  static void bme280_init(void)
 ..\Src\apps\Tracker\main_tracker.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=41296 RO-data=776 RW-data=1004 ZI-data=6964  
+Program Size: Code=37156 RO-data=852 RW-data=732 ZI-data=6948  
 FromELF: creating hex file...
 After Build - User command #1: C:\Keil_v5\\ARM\ARMCC\bin\fromelf.exe --bin --output=lr1110_modem_application_examples.bin lr1110_modem_application_examples\lr1110_modem_application_examples.axf
 "lr1110_modem_application_examples\lr1110_modem_application_examples.axf" - 0 Error(s), 2 Warning(s).
