--- a/MDK-ARM/lr1110_modem_application_examples/lr1110_modem_application_examples.build_log.htm
+++ b/MDK-ARM/lr1110_modem_application_examples/lr1110_modem_application_examples.build_log.htm
@@ -21,23 +21,14 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.7.0
 Dialog DLL:      TCM.DLL V1.36.5.0
  
 <h2>Project:</h2>
-D:\RF_things\3.Project\MLR1110\LR1110_Code\LR1110_Tracker\MDK-ARM\lr1110_modem_application_example.uvprojx
+D:\RF_things\3.Project\KLTN\Src\LR1110_Tracker\MDK-ARM\lr1110_modem_application_example.uvprojx
 Project File Date:  04/23/2021
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'lr1110_modem_tracker_US915'
-compiling main_tracker.c...
-..\Src\apps\Tracker\main_tracker.c(382): warning:  #550-D: variable "modem_response_code"  was set but never used
-      lr1110_modem_response_code_t modem_response_code = LR1110_MODEM_RESPONSE_CODE_OK;
-..\Src\apps\Tracker\main_tracker.c(992): warning:  #177-D: function "print_lorawan_keys"  was declared but never referenced
-  static void print_lorawan_keys( const uint8_t* dev_eui, const uint8_t* join_eui, const uint8_t* app_key, uint32_t pin )
-..\Src\apps\Tracker\main_tracker.c: 2 warnings, 0 errors
-linking...
-Program Size: Code=41296 RO-data=776 RW-data=1004 ZI-data=6964  
-FromELF: creating hex file...
 After Build - User command #1: C:\Keil_v5\\ARM\ARMCC\bin\fromelf.exe --bin --output=lr1110_modem_application_examples.bin lr1110_modem_application_examples\lr1110_modem_application_examples.axf
-"lr1110_modem_application_examples\lr1110_modem_application_examples.axf" - 0 Error(s), 2 Warning(s).
+"lr1110_modem_application_examples\lr1110_modem_application_examples.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -60,7 +51,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:15
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
