--- a/MDK-ARM/lr1110_modem_application_examples/lr1110_modem_application_examples.build_log.htm
+++ b/MDK-ARM/lr1110_modem_application_examples/lr1110_modem_application_examples.build_log.htm
@@ -27,39 +27,15 @@ Project File Date:  04/23/2021
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'lr1110_modem_tracker_US915'
-compiling leds.c...
-compiling external_supply.c...
-compiling lis2de12.c...
 compiling main_tracker.c...
 ..\Src\apps\Tracker\main_tracker.c(1083): warning:  #177-D: function "is_tracker_in_static_mode"  was declared but never referenced
   static bool is_tracker_in_static_mode( void )
-..\Src\apps\Tracker\main_tracker.c(1333): warning:  #177-D: function "bme280_init"  was declared but never referenced
-  static void bme280_init(void)
-..\Src\apps\Tracker\main_tracker.c: 2 warnings, 0 errors
-compiling bmp280.c...
-compiling tracker_utility.c...
-compiling gnss_scan.c...
-compiling wifi_scan.c...
-compiling smtc_hal_gpio.c...
-compiling lr1110.c...
-compiling lr1110_modem_hal.c...
-compiling lr1110-modem-board.c...
-compiling smtc_hal_i2c.c...
-compiling smtc_hal_rng.c...
-compiling smtc_hal_rtc.c...
-compiling smtc_hal_mcu.c...
-compiling smtc_hal_spi.c...
-..\Src\smtc_hal\smtc_hal_spi.c(67): warning:  #2803-D: unrecognized GCC pragma
-  #pragma GCC diagnostic ignored "-Wmissing-braces"
-..\Src\smtc_hal\smtc_hal_spi.c: 1 warning, 0 errors
-compiling smtc_hal_tmr.c...
-compiling smtc_hal_uart.c...
-compiling smtc_hal_tmr_list.c...
+..\Src\apps\Tracker\main_tracker.c: 1 warning, 0 errors
 linking...
 Program Size: Code=37156 RO-data=852 RW-data=732 ZI-data=6948  
 FromELF: creating hex file...
 After Build - User command #1: C:\Keil_v5\\ARM\ARMCC\bin\fromelf.exe --bin --output=lr1110_modem_application_examples.bin lr1110_modem_application_examples\lr1110_modem_application_examples.axf
-"lr1110_modem_application_examples\lr1110_modem_application_examples.axf" - 0 Error(s), 3 Warning(s).
+"lr1110_modem_application_examples\lr1110_modem_application_examples.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -82,7 +58,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:01:33
+Build Time Elapsed:  00:00:13
 </pre>
 </body>
 </html>
